[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimback-radar"
version = "0.1.0"
description = "AI-powered inbox scanner for hidden refunds, subscription traps, and savings opportunities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
claimback-radar = "main:main"
